# legacy-project

ВЕБка(м)/kr1/: Task.html
ВЕБка(м)/lab_2/: div_page.html  table_page.html
ВЕБка(м)/lab_3/: adaptive_page.html
ВЕБка(м)/lab_3_2/: index.html  script.js
ВЕБка(м)/lab_4/: script.js
ВЕБка(м)/lab_5/: feedback_form.html  index.html
ВЕБка(м)/lab_6/: airlines-menu.html  div_page.html  script.js
ВЕБка(м)/lab_7/: index.html
ВЕБка(м)/lab_7_2/: details.html  flights.json  home.html  index.html  main.js  package-lock.json  package.json  server.js
ВЕБка(м)/lab_8/belavia-app/: db.json  rest.js  server.js  store.js
ВЕБка(м)/lab_8/belavia-app/public/css/: style.css
ВЕБка(м)/lab_8/belavia-app/public/js/: app.js
ВЕБка(м)/lab_8/belavia-app/views/: error.ejs  flight-form.ejs  flights.ejs
ВЕБка(м)/lab_8_3/belavia-app/: db.json  index.html  package.json  store.js
ВЕБка(м)/lab_8_3/belavia-app/views/: index.ejs
ВЕБка(м)/lab_9/belavia-app/: db.json  index.html  package-lock.json  package.json  rest.js  store.js  webpack.config.js
ВЕБка(м)/lab_9/belavia-app/public/js/: app.js
ВЕБка(м)/lab_9/belavia-app/views/: flights.ejs
МВ(да так просто)/: чё тут.txt
МВ(да так просто)/Исходники/lab4_2sem/: lab4.cpp  lab4.sln  lab4.vcxproj
МВ(да так просто)/Исходники/МВ лаб1/: main.tex
МВ(да так просто)/Исходники/МВ лаб1 2сем/: main.tex
МВ(да так просто)/Исходники/МВ лаб2/: main.tex
МВ(да так просто)/Исходники/МВ лаб2 2сем/: main.tex
МВ(да так просто)/Исходники/МВ лаб3/: main.tex
МВ(да так просто)/Исходники/МВ лаб3 2сем/: main.tex
МВ(да так просто)/Исходники/МВ лаб4/: main.tex
МВ(да так просто)/Исходники/МВ лаб4 2сем/: main.tex
МВ(да так просто)/Исходники/МВ лаб5/: main.tex
МВ(да так просто)/Исходники/МВ лаб5 2сем/: main.tex
МВ(да так просто)/Экз/: МВ вопросы.docx
ПэКэГэ/pkg_lab1-main/pkg_lab1-main/: mainwindow.cpp  mainwindow.h  mainwindow.ui  module.cpp  module.h
ПэКэГэ/pkg_lab2-main/pkg_lab2-main/: widget.cpp  widget.h  widget.ui
ПэКэГэ/pkg_lab3-main/pkg_lab3-main/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pkg_lab3_17.pro  pkg_lab3_17.pro.user.kMTOQE
ПэКэГэ/pkg_lab4-main/pkg_lab4-main/: index.html  script.js
ПэКэГэ/pkg_lab5-main/pkg_lab5-main/: part1.html  part2.html
ПэКэГэ/pkg_lab6-main/pkg_lab6-main/: lab6.html
ТПшчка/: README.md
ТПшчка/lab5/: README.md
ТПшчка/lab6/: README.md
ТПшчка/lab7/: README.md
ТПшчка/lab8+9/: README.md
ТПшчка/tpmp-gr9b-lab1-Xeiniya-main/tpmp-gr9b-lab1-Xeiniya-main/: .gitignore  README.md  control-questions.md
ТПшчка/tpmp-gr9b-lab1-Xeiniya-main/tpmp-gr9b-lab1-Xeiniya-main/src/: bmi  bmi.c
ТПшчка/tpmp-gr9b-lab2-task3-Xeiniya-main/tpmp-gr9b-lab2-task3-Xeiniya-main/: Makefile  README.md  test_input.txt
ТПшчка/tpmp-gr9b-lab2-task3-Xeiniya-main/tpmp-gr9b-lab2-task3-Xeiniya-main/doc/: README
ТПшчка/tpmp-gr9b-lab2-task3-Xeiniya-main/tpmp-gr9b-lab2-task3-Xeiniya-main/include/: interface.h  znakmanager.h
ТПшчка/tpmp-gr9b-lab2-task3-Xeiniya-main/tpmp-gr9b-lab2-task3-Xeiniya-main/src/: client.c  znakmanager.c
ТПшчка/tpmp-gr9b-lab2-task4-Xeiniya-main/tpmp-gr9b-lab2-task4-Xeiniya-main/: Makefile  README.md  data.txt
ТПшчка/tpmp-gr9b-lab2-task4-Xeiniya-main/tpmp-gr9b-lab2-task4-Xeiniya-main/doc/: README.md
ТПшчка/tpmp-gr9b-lab2-task4-Xeiniya-main/tpmp-gr9b-lab2-task4-Xeiniya-main/include/: client.h  filemanager.h  interface.h
ТПшчка/tpmp-gr9b-lab2-task4-Xeiniya-main/tpmp-gr9b-lab2-task4-Xeiniya-main/src/: client.c  filemanager.c  main.c
ТПшчка/tpmp-gr9b-lab3-Xeiniya-main/tpmp-gr9b-lab3-Xeiniya-main/: README.md
ТПшчка/tpmp-gr9b-lab3-Xeiniya-main/tpmp-gr9b-lab3-Xeiniya-main/examples/: EXAMPLES.md  example10_gr9_NikolaevaKsenia.c  example7_gr9_NikolaevaKsenia.c  example8_gr9_NikolaevaKsenia.c  example9_gr9_NikolaevaKsenia.c
ТПшчка/tpmp-gr9b-lab3-Xeiniya-main/tpmp-gr9b-lab3-Xeiniya-main/project5/: Makefile  README.md
сОСИ/: чё тут.txt
сОСИ/OS_lab1/: CMakeLists.txt
сОСИ/OS_lab1/Creator/: CMakeLists.txt  creator.cpp
сОСИ/OS_lab1/Main/: CMakeLists.txt  main.cpp
сОСИ/OS_lab1/Reporter/: CMakeLists.txt  reporter.cpp
сОСИ/OS_lab1/include/: Structure.h
сОСИ/OS_lab1/tests/: CMakeLists.txt  test_creator.cpp  test_main.cpp  test_reporter.cpp
сОСИ/OS_lab2/lab2_C++14/: CMakeLists.txt
сОСИ/OS_lab2/lab2_C++14/src/: ArrayData.h  Threads.cpp  Threads.h  main.cpp
сОСИ/OS_lab2/lab2_C++14/tests/: CMakeLists.txt  tests.cpp
сОСИ/OS_lab2/lab2_C++98/: CMakeLists.txt
сОСИ/OS_lab2/lab2_C++98/src/: Data.h  Threads.cpp  Threads.h  main.cpp
сОСИ/OS_lab2/lab2_C++98/tests/: CMakeLists.txt  tests.cpp
сОСИ/OS_lab3/lab3_14/: CMakeLists.txt
сОСИ/OS_lab3/lab3_14/lab314/: lab3.cpp  lab3.h
сОСИ/OS_lab3/lab3_98/: CMakeLists.txt
сОСИ/OS_lab3/lab3_98/lab3/: lab3.cpp  lab3.h
сОСИ/OS_lab4/lab_14/: CMakeLists.txt
сОСИ/OS_lab4/lab_14/src/common/: message_file.cpp  message_file.h
сОСИ/OS_lab4/lab_14/src/receiver/: CMakeLists.txt  receiver.cpp  receiver.h
сОСИ/OS_lab4/lab_14/src/sender/: CMakeLists.txt  sender.cpp  sender.h
сОСИ/OS_lab4/lab_14/tests/: CMakeLists.txt  message_file_test.cpp
сОСИ/OS_lab4/lab_98/: CMakeLists.txt
сОСИ/OS_lab4/lab_98/src/common/: CMakeLists.txt  message_file.cpp  message_file.h
сОСИ/OS_lab4/lab_98/src/receiver/: CMakeLists.txt  receiver.cpp  receiver.h
сОСИ/OS_lab4/lab_98/src/sender/: CMakeLists.txt  sender.cpp  sender.h
сОСИ/OS_lab4/lab_98/tests/: CMakeLists.txt  message_file_test.cpp  receiver_test.cpp  sender_test.cpp
сОСИ/OS_lab5/lab_17/: CMakeLists.txt
сОСИ/OS_lab5/lab_17/include/: access_manager.h  common.h  file_manager.h  named_pipe.h  protocol.h
сОСИ/OS_lab5/lab_17/src/: access_manager.cpp  common.cpp  file_manager.cpp  named_pipe.cpp  protocol.cpp
сОСИ/OS_lab5/lab_17/tests/: test_common.cpp  test_file_manager.cpp
сОСИ/OS_lab5/lab_98/include/: access_manager.h  common.h  file_manager.h  named_pipe.h  protocol.h
сОСИ/OS_lab5/lab_98/src/: access_manager.cpp  client.cpp  common.cpp  file_manager.cpp  named_pipe.cpp  protocol.cpp  server.cpp
сОСИ/OS_lab5/lab_98/tests/: test_access_manager.cpp  test_common.cpp  test_file_manager.cpp  test_protocol.cpp
(+21 files in other folders)
